Overscroll fix (iphone initial height breaks the flow)

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,10 @@ body {
   font-family: 'Open Sans', sans-serif;
   user-select: none;
   color: #e9e0e0;
+  /* Position fixed and overflow hidden are required. Otherwise there will be overscroll on iphones */
+  position: fixed; 
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -62,8 +66,8 @@ ul {
 
 .App {
   width: 100%;
-  height: 100svh;
+  height: 100dvh;
   justify-content: center;
   display: flex;
-  overflow: auto;
+  overflow: auto; 
 }
