--- a/src/pages/FallbackComponent/styles.module.css
+++ b/src/pages/FallbackComponent/styles.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 100svh;
+  height: 100dvh;
   background-image: url('../../assets/background.png');
   background-repeat: no-repeat;
   background-size: cover;
